syntax = "proto3";

import "dashql/connection.proto";
import "salesforce/hyperdb/grpc/v1/hyper_service.proto";

package dashql;

enum ScriptType {
    Query = 0;
    Schema = 1;
}

message WorkbookEntry {
    /// The script id
    uint32 script_id = 1;
    /// The title
    string title = 2;
}

message WorkbookScript {
    /// The script id
    uint32 script_id = 1;
    /// The script type
    ScriptType script_type = 2;
    /// The script text
    string script_text = 3;
}

message WorkbookMetadata {
    /// The file name
    string file_name = 1;
}

message Workbook {
    /// The connection params
    ConnectionParams connection_params = 1;
    /// The scripts
    repeated WorkbookScript scripts = 2;
    /// The workbook entries
    repeated WorkbookEntry workbook_entries = 3;
    /// The workbook metadata
    WorkbookMetadata workbook_metadata = 4;
}
